[tool.poetry]
name = "csa-lab3-aka-test-for-github"
version = "0.1.0"
description = ""
authors = ["soska <soska2318@itmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.6.7"
coverage = "^7.6.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
