[tool.poetry]
name = "csa-lab3-aka-test-for-github"
version = "0.1.0"
description = ""
authors = ["soska <soska2318@itmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.1.8"
pytest = "^8.3.3"
coverage = "^7.6.1"
mypy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
